--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
             "build": {
               "builder": "@angular/build:application",
               "options": {
+                "outputPath": "dist/colchoneria_frontend",
                 "browser": "src/main.ts",
                 "polyfills": [
                   "zone.js"
