--- a/angular.json
+++ b/angular.json
@@ -1,104 +1,105 @@
-    {
-      "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-      "version": 1,
-      "newProjectRoot": "projects",
-      "projects": {
-        "colchoneria_frontend": {
-          "projectType": "application",
-          "schematics": {},
-          "root": "",
-          "sourceRoot": "src",
-          "prefix": "app",
-          "architect": {
-            "build": {
-              "builder": "@angular/build:application",
-              "options": {
-                "outputPath": "dist/colchoneria_frontend",
-                "browser": "src/main.ts",
-                "polyfills": [
-                  "zone.js"
-                ],
-                "tsConfig": "tsconfig.app.json",
-                "assets": [
-                  {
-                    "glob": "**/*",
-                    "input": "public"
-                  },
-                  {
-                    "glob": "_redirects",
-                    "input": "src",
-                    "output": "/"
-                  }
-                ],
-                "styles": [
-                  "src/styles.css"
-                ]
+{
+  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "version": 1,
+  "newProjectRoot": "projects",
+  "projects": {
+    "colchoneria_frontend": {
+      "projectType": "application",
+      "schematics": {},
+      "root": "",
+      "sourceRoot": "src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular/build:application",
+          "options": {
+            "outputPath": "dist/colchoneria_frontend", 
+            "browser": "src/main.ts",
+            "polyfills": [
+              "zone.js"
+            ],
+            "tsConfig": "tsconfig.app.json",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "public"
               },
-              "configurations": {
-                "production": {
-                  "budgets": [
-                    {
-                      "type": "initial",
-                      "maximumWarning": "2MB",
-                      "maximumError": "5MB"
-                    },
-                    {
-                      "type": "anyComponentStyle",
-                      "maximumWarning": "6kB",
-                      "maximumError": "10kB"
-                    }
-                  ],
-                  "outputHashing": "all"
+              {
+                "glob": "_redirects",
+                "input": "src",
+                "output": "/"
+              },
+              "src/favicon.ico" 
+            ],
+            "styles": [
+              "src/styles.css"
+            ]
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2MB",
+                  "maximumError": "5MB"
                 },
-                "development": {
-                  "optimization": false,
-                  "extractLicenses": false,
-                  "sourceMap": true
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kB",
+                  "maximumError": "10kB"
                 }
-              },
-              "defaultConfiguration": "production"
+              ],
+              "outputHashing": "all"
             },
-            "serve": {
-              "builder": "@angular/build:dev-server",
-              "options": {
-                },
-              "configurations": {
-                "production": {
-                  "buildTarget": "colchoneria_frontend:build:production"
-                },
-                "development": {
-                  "buildTarget": "colchoneria_frontend:build:development"
-                }
-              },
-              "defaultConfiguration": "development"
-            },
-            "extract-i18n": {
-              "builder": "@angular/build:extract-i18n"
-            },
-            "test": {
-              "builder": "@angular/build:karma",
-              "options": {
-                "polyfills": [
-                  "zone.js",
-                  "zone.js/testing"
-                ],
-                "tsConfig": "tsconfig.spec.json",
-                "assets": [
-                  {
-                    "glob": "**/*",
-                    "input": "public"
-                  }
-                ],
-                "styles": [
-                  "src/styles.css"
-                ]
-              }
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
             }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular/build:dev-server",
+          "options": {
+
+          },
+          "configurations": {
+            "production": {
+              "buildTarget": "colchoneria_frontend:build:production"
+            },
+            "development": {
+              "buildTarget": "colchoneria_frontend:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular/build:extract-i18n"
+        },
+        "test": {
+          "builder": "@angular/build:karma",
+          "options": {
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
+            "tsConfig": "tsconfig.spec.json",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "public"
+              }
+            ],
+            "styles": [
+              "src/styles.css"
+            ]
           }
         }
-      },
-      "cli": {
-        "analytics": false
       }
     }
-    
+  },
+  "cli": {
+    "analytics": false
+  }
+}
