--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,7 @@
               "src/favicon.ico"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css" 
             ]
           },
           "configurations": {
@@ -40,8 +40,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "2MB",
-                  "maximumError": "5MB"
+                  "maximumWarning": "2MB", 
+                  "maximumError": "5MB"    
                 },
                 {
                   "type": "anyComponentStyle",
@@ -50,9 +50,9 @@
                 },
                 { 
                   "type": "all",
-                  "name": "css",
-                  "maximumWarning": "20kb",
-                  "maximumError": "25kb"
+                  "name": "styles", 
+                  "maximumWarning": "50kB", 
+                  "maximumError": "100kB"  
                 }
               ],
               "outputHashing": "all"
